HW1/E-1.2.18-EuclideanDistance/wdir_msg/compile.err

EuclideanDistance.java:7: error: ';' expected
        double distance = Math.sqrt(x+y)
                                        ^
1 error


